[gd_scene load_steps=15 format=2]

[ext_resource path="res://Character2.gd" type="Script" id=1]
[ext_resource path="res://Graphics/library.png" type="Texture" id=2]
[ext_resource path="res://Graphics/1 blush.png" type="Texture" id=3]
[ext_resource path="res://Graphics/1 suprised.png" type="Texture" id=4]
[ext_resource path="res://Graphics/1 neutral.png" type="Texture" id=5]
[ext_resource path="res://Graphics/1 angry.png" type="Texture" id=6]
[ext_resource path="res://Graphics/player.png" type="Texture" id=7]
[ext_resource path="res://Graphics/1 happy.png" type="Texture" id=8]
[ext_resource path="res://box.png" type="Texture" id=9]
[ext_resource path="res://TextBox.tscn" type="PackedScene" id=10]
[ext_resource path="res://Fonts/SpecialElite copy.ttf" type="DynamicFontData" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "me",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "happy",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "blush",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "neutral",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "surprised",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 38
extra_spacing_top = 10
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 11 )

[node name="Character2" type="Node2D"]
script = ExtResource( 1 )

[node name="library" type="Sprite" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 960, 540 )
scale = Vector2( 0.65, 0.6 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 540, 440 )
scale = Vector2( 0.33, 0.33 )
frames = SubResource( 1 )
animation = "blush"

[node name="box" type="Sprite" parent="."]
modulate = Color( 4.67059, 1.76863, 5.54118, 0.901961 )
position = Vector2( 960, 860 )
scale = Vector2( 28, 5 )
texture = ExtResource( 9 )

[node name="TextBox" parent="." instance=ExtResource( 10 )]

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 130.0
margin_top = 240.0
margin_right = 520.0
margin_bottom = 720.0

[node name="Info" type="Node2D" parent="."]
visible = false

[node name="box2" type="Sprite" parent="Info"]
modulate = Color( 3.51, 1.18, 1.16, 1 )
position = Vector2( 960, 540 )
scale = Vector2( 16, 13 )
texture = ExtResource( 9 )

[node name="InfoLabel" type="RichTextLabel" parent="Info"]
margin_left = 510.0
margin_top = 180.0
margin_right = 1410.0
margin_bottom = 830.0
custom_fonts/normal_font = SubResource( 2 )
text = "Name: Jakob Ingebrigsten
Occupation: Professional Runner
Net Worth: $4.3 million
Place of Origin: Norway
Fun Fact #1: He was the first highschooler to run a sub-4 mile. Did it when he was 16.
Fun Fact #2: He was disqualified at Doha World Championships 2019
Nickname: Rabbit
Drawback #1: Virgin
Drawback #2: Arrogant


"
scroll_active = false

[node name="InfoLabel2" type="RichTextLabel" parent="Info"]
margin_left = 510.0
margin_top = 180.0
margin_right = 1410.0
margin_bottom = 830.0
custom_fonts/normal_font = SubResource( 2 )
text = "Their attraction to You: 0
Monthly support: $100
"
scroll_active = false

[node name="Next" type="Button" parent="Info"]
margin_left = 1200.0
margin_top = 810.0
margin_right = 1229.0
margin_bottom = 833.0
rect_scale = Vector2( 4, 3 )
custom_fonts/font = SubResource( 3 )
text = "->"

[node name="Hide" type="Button" parent="Info"]
margin_left = 590.0
margin_top = 800.0
margin_right = 618.0
margin_bottom = 826.0
rect_scale = Vector2( 4, 3 )
custom_fonts/font = SubResource( 3 )
text = "X"

[node name="Tween" type="Tween" parent="."]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="showInfo"]
[connection signal="mouse_entered" from="Info/Next" to="." method="_on_Next_mouse_entered"]
[connection signal="mouse_exited" from="Info/Next" to="." method="_on_Next_mouse_exited"]
[connection signal="pressed" from="Info/Next" to="." method="nextPage"]
[connection signal="mouse_entered" from="Info/Hide" to="." method="_on_Hide_mouse_entered"]
[connection signal="mouse_exited" from="Info/Hide" to="." method="_on_Hide_mouse_exited"]
[connection signal="pressed" from="Info/Hide" to="." method="hideInfo"]
